Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event__e/CRM_OrderItemStatus_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce upon Order inserts and updates</description>
    <label>CRM OrderItemStatus Event - In</label>
    <pluralLabel>CRM OrderItemStatus Events - In</pluralLabel>
</CustomObject>