Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event__e/fields/orderNumber__c.field-meta.xml
<CustomField>
    <fullName>orderNumber__c</fullName>
    <label>orderNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>