Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event__e/fields/parentItemID__c.field-meta.xml
<CustomField>
    <fullName>parentItemID__c</fullName>
    <label>parentItemID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>