Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event__e/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>