Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event__e/fields/shippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>shippedQuantity__c</fullName>
    <label>shippedQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>