Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event__e/fields/shippingProvider__c.field-meta.xml
<CustomField>
    <fullName>shippingProvider__c</fullName>
    <label>shippingProvider</label>
    <length>30</length>
    <type>Text</type>
</CustomField>