Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event__e/fields/total__c.field-meta.xml
<CustomField>
    <fullName>total__c</fullName>
    <label>total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>